test/fail/actor-reference-invalid.mo
// actor references

let _ = actor "ic:C0FEFED00D";  // does not validate
